renamed burndown chart classes + update BareBoneRowserLaunch class + imporved DatePicker