@@ -1,22 +1,26 @@
 /**
- * Bare Bones Browser Launch for Java Utility class to open a web page from a
- * Swing application in the user's default browser. Supports: Mac OS X,
- * GNU/Linux, Unix, Windows XP/Vista/ Latest Version:
- * http://www.centerkey.com/java/browser/
+ * <b>Bare Bones Browser Launch for Java</b><br>
+ * Utility class to open a web page from a Swing application in the user's
+ * default browser.<br>
+ * Supports: Mac OS X, GNU/Linux, Unix, Windows XP/Vista/7<br>
+ * Example Usage:<code><br> &nbsp; &nbsp;
+ *    String url = "http://www.google.com/";<br> &nbsp; &nbsp;
+ *    BareBonesBrowserLaunch.openURL(url);<br></code> Latest Version: <a
+ * href="http://www.centerkey.com/java/browser/">www.centerkey.com/java/browser</a><br>
+ * Author: Dem Pilafian<br>
+ * Public Domain Software -- Free to Use as You Like
  *
- * @author Dem Pilafian Public Domain Software -- Free to Use as You Like
- * @version 3.0, February 7, 2010
+ * @version 3.1, June 6, 2010
  */
 package org.mypomodoro.util;
 
-import java.util.Arrays;
 import javax.swing.JOptionPane;
-import org.mypomodoro.Main;
+import java.util.Arrays;
 
 public class BareBonesBrowserLaunch {
 
     static final String[] browsers = {"google-chrome", "firefox", "opera",
-        "konqueror", "epiphany", "safari", "seamonkey", "galeon", "kazehakase", "mozilla"};
+        "epiphany", "konqueror", "conkeror", "midori", "kazehakase", "mozilla"};
     static final String errMsg = "Error attempting to launch web browser";
 
     /**
@@ -26,13 +30,12 @@ public class BareBonesBrowserLaunch {
      * "http://www.google.com/")
      */
     public static void openURL(String url) {
-        try {  //attempt to use Desktop library from JDK 1.6+ (even if on 1.5)
+        try {  //attempt to use Desktop library from JDK 1.6+
             Class<?> d = Class.forName("java.awt.Desktop");
             d.getDeclaredMethod("browse", new Class[]{java.net.URI.class}).invoke(
                     d.getDeclaredMethod("getDesktop").invoke(null),
                     new Object[]{java.net.URI.create(url)});
-            //above code mimics:
-            //   java.awt.Desktop.getDesktop().browse(java.net.URI.create(url));
+            //above code mimicks:  java.awt.Desktop.getDesktop().browse()
         } catch (Exception ignore) {  //library not available or failed
             String osName = System.getProperty("os.name");
             try {
@@ -44,23 +47,20 @@ public class BareBonesBrowserLaunch {
                     Runtime.getRuntime().exec(
                             "rundll32 url.dll,FileProtocolHandler " + url);
                 } else { //assume Unix or Linux
-                    boolean found = false;
-                    for (String browser : browsers) {
-                        if (!found) {
-                            found = Runtime.getRuntime().exec(
-                                    new String[]{"which", browser}).waitFor() == 0;
-                            if (found) {
-                                Runtime.getRuntime().exec(new String[]{browser, url});
-                            }
+                    String browser = null;
+                    for (String b : browsers) {
+                        if (browser == null && Runtime.getRuntime().exec(new String[]{"which", b}).getInputStream().read() != -1) {
+                            Runtime.getRuntime().exec(new String[]{browser = b, url});
                         }
                     }
-                    if (!found) {
+                    if (browser == null) {
                         throw new Exception(Arrays.toString(browsers));
                     }
                 }
             } catch (Exception e) {
-                JOptionPane.showMessageDialog(Main.gui, errMsg + "\n" + e.toString());
+                JOptionPane.showMessageDialog(null, errMsg + "\n" + e.toString());
             }
         }
     }
+
 }
